--- a/src/component/Detail/detail.scss
+++ b/src/component/Detail/detail.scss
@@ -6,6 +6,10 @@
   border: 1px solid #337ab7;
   border-radius: 5px;
   padding: 10px;
+  margin-bottom: 20px;
+  margin-right: 40px;
+  width: 30%;
+  float: left;
 }
 
 .tileRow {
@@ -29,4 +33,8 @@
 .errorMsg {
   color: red;
   text-align: center;
+}
+
+.addTeamButton{
+  margin-bottom: 20px;
 }
