Budget Container done.

--- a/src/component/Team/team.scss
+++ b/src/component/Team/team.scss
@@ -45,3 +45,8 @@
     text-decoration: none !important;
   }
 }
+
+.progressbar-container{
+  background-color: rgb(233, 233, 233);
+  margin: 25px 0px;
+}
