--- a/src/component/Team/team.scss
+++ b/src/component/Team/team.scss
@@ -50,3 +50,8 @@
   background-color: rgb(233, 233, 233);
   margin: 25px 0px;
 }
+
+.eVDmWl{
+  background-color: white !important;
+  height: 100% !important;
+}
